--- a/alpine/elasticsearch/2.x/templates/elasticsearch.yml.tmpl
+++ b/alpine/elasticsearch/2.x/templates/elasticsearch.yml.tmpl
@@ -1,1 +1,10 @@
-network.host: 0.0.0.0
+# Placed by confd. Do not hand edit.
+network.host: {{getv "/self/container/primary_ip"}}
+
+bootstrap.mlockall: true
+discovery.zen.ping.multicast.enabled: false
+
+{{with getv "/self/service/name"}} #ElasticSearchTesting
+discovery.zen.ping.unicast.hosts: {{range ls "/self/service/containers"}}
+  - {{getv (printf "/self/service/containers/%s/primary_ip" .)}}{{end}}
+{{end}}
