--- a/alpine/elasticsearch/2.x/templates/logging.yml.tmpl
+++ b/alpine/elasticsearch/2.x/templates/logging.yml.tmpl
@@ -1,3 +1,8 @@
+# Placed by confd. Do not hand edit.
+{{if exists "/elasticsearch/log"}}
+{{range gets "/elasticsearch/log/*"}}{{ $data := json .Value}}{{range $key, $value := $data}}
+{{$key}}: {{$value}}{{end}}{{end}}
+{{else}}
 # you can override this using by setting a system property, for example -Des.logger.level=DEBUG
 es.logger.level: INFO
 rootLogger: ${es.logger.level}, console
@@ -13,3 +18,4 @@ appender:
     layout:
       type: consolePattern
       conversionPattern: "[%d{ISO8601}][%-5p][%-25c] %m%n"
+{{end}}
