--- a/alpine/elasticsearch/2.x/templates/elasticsearch.yml.tmpl
+++ b/alpine/elasticsearch/2.x/templates/elasticsearch.yml.tmpl
@@ -1,10 +1,17 @@
 # Placed by confd. Do not hand edit.
+{{ $host_ip := }}
 network.host: {{getv "/self/container/primary_ip"}}
 
 bootstrap.mlockall: true
 discovery.zen.ping.multicast.enabled: false
 
-{{with getv "/self/service/name"}} #ElasticSearchTesting
-discovery.zen.ping.unicast.hosts: {{range ls "/self/service/containers"}}
-  - {{getv (printf "/self/service/containers/%s/primary_ip" .)}}{{end}}
+{{ $cluster := getenv "ES_CLUSTER_NAME" -}}
+{{ if $cluster -}}
+discovery.zen.ping.unicast.hosts: {{ range ls "/self/service/containers" }}
+{{ if ne . "self" -}}
+{{ $health := getv (printf "/self/service/containers/%s/health_state" . ) -}}
+{{ $primary_ip := getv (printf "/self/service/containers/%s/primary_ip" .) -}}
+{{ if and (eq $health "healthy") (ne $host_ip $primary_ip) }}  - {{ $primary_ip }}{{end -}}
+{{end -}}
+{{end -}}
 {{end}}
