--- a/alpine/elasticsearch/2.x/templates/elasticsearch.yml.tmpl
+++ b/alpine/elasticsearch/2.x/templates/elasticsearch.yml.tmpl
@@ -7,7 +7,7 @@ bootstrap.mlockall: true
 {{ $cluster := getenv "ES_CLUSTER_NAME" -}}
 {{ if $cluster -}}
 discovery.zen.ping.unicast.hosts: {{ range ls "/self/service/containers" }}
-{{ if ne . "self" -}}{{ $primary_ip := getv (printf "/self/service/containers/%s/primary_ip" .) -}}  - {{ $primary_ip }}{{end -}}
+{{ if ne . "self" -}}  - {{ getv (printf "/self/service/containers/%s/primary_ip" .) -}}{{end -}}
 {{end -}}
 {{end -}}
 {{end}}
