Adds cluster service env variable Updates template to use env variable to determine where to locate master servers

--- a/alpine/elasticsearch/2.x/templates/elasticsearch.yml.tmpl
+++ b/alpine/elasticsearch/2.x/templates/elasticsearch.yml.tmpl
@@ -29,7 +29,8 @@ node.data: true
 node.data: false
 {{ end -}}
 
-discovery.zen.ping.unicast.hosts: {{ range ls "/self/service/containers" }}
+{{ $cluster_service := getenv "ES_CLUSTER_SERVICE" -}}
+discovery.zen.ping.unicast.hosts: {{ range ls (printf "/services/%s/containers" $cluster_service) }}
 {{ if ne . "self" -}}  - {{ getv (printf "/self/service/containers/%s/primary_ip" .) -}}{{end -}}
 {{end -}}
 {{end}}
