Changes container to use _eth0_ instead of host ip.

--- a/alpine/elasticsearch/2.x/templates/elasticsearch.yml.tmpl
+++ b/alpine/elasticsearch/2.x/templates/elasticsearch.yml.tmpl
@@ -1,6 +1,5 @@
 # Placed by confd. Do not hand edit.
-{{ $host_ip := getv "/self/container/primary_ip"}}
-network.host: {{ $host_ip }}
+network.host: _eth0_
 
 bootstrap.mlockall: true
 
